# Client-BraveRats

./: CMakeLists.txt  README.md  main.cpp
lib/: glad.c
src/: Application.cpp  Application.hpp  Game.cpp  Game.hpp  Terminal.cpp  Terminal.hpp  Window.cpp  Window.hpp
src/barriers/: Barrier.hpp  BarrierGMLS.hpp
src/exceptions/: Exception.cpp  Exception.hpp  WindowException.hpp
